<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Sunshine</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="detail_activity">Details</string>
    <string name="city">City</string>
    <string name="Bangalore">Bangalore</string>
    <string name="preference_default_city">Default City</string>
    <string name="unit">Unit</string>
    <string name="metric">metric</string>
    <string name="preference_default_unit">Default Unit</string>
    <string name="days">Days</string>
    <string name="preference_default_days">Default Days</string>
    <string name="week">7</string>
    <string name="enter_default_city">Enter city name</string>
    <string name="select_unit">Select unit type</string>
    <string name="enter_days">Number of days</string>
    <string name="view_location">View Location</string>
    <string name="action_share">Share</string>
    <string name="imperial">imperial</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="format_wind_mph"> Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
    <string name="satellite_view">Satellite View</string>
    <string name="Satellite_View">Satellite View</string>
    <string name="seasia">seasia</string>
    <string name="select_region">Select Region</string>
    <string name="preference_default_satellite_region">default satellite region</string>
</resources>
