<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:id="@+id/preference_default_city"
        android:title="@string/city"
        android:defaultValue="@string/Bangalore"
        android:key="@string/preference_default_city"
        android:dialogTitle="@string/enter_default_city" />
    <ListPreference
        android:title="@string/unit"
        android:defaultValue="@string/metric"
        android:dialogTitle="@string/select_unit"
        android:key="@string/preference_default_unit"
        android:entries="@array/unit_keys"
        android:entryValues="@array/unit_values"/>
    <EditTextPreference
        android:id="@+id/preference_default_days"
        android:dialogTitle="@string/enter_days"
        android:title="@string/days"
        android:key="@string/preference_default_days"
        android:defaultValue="@string/week"/>
</PreferenceScreen>